Update HTML files with personal information

--- a/public/projects.html
+++ b/public/projects.html
@@ -44,7 +44,7 @@ Feb 2024
 							<li class="nav-item dropdown">
 								<a href="home.html" id="mainNavBlog" class="nav-link" data-bs-toggle="dropdown"
 									aria-haspopup="true" aria-expanded="false">
-									About Me
+									About Me: Senuri Kahandugoda
 								</a>
 							</li>
 
@@ -75,7 +75,7 @@ Feb 2024
 		<div class="container pt-6">
 
 			<h1 class="display-5 fw-bold">
-				Portfolio Project <div class="text-danger">Full Name </div>
+				Portfolio Project <div class="text-danger">Senuri Kahandugoda </div>
 			</h1>
 
 			<nav aria-label="breadcrumb">
@@ -129,10 +129,8 @@ Feb 2024
 
 							<p>
 								<strong>Question #1 : Explain what does it means Immutable infrastructure?</strong>
-								xxxxxxx xxxxxxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
+								
+Immutable infrastructure involves never updating deployed components. Instead, updates are made by replacing old servers with new ones pre-configured with the desired changes, enhancing consistency and reliability.
 							</p>
 
 							<div class="border-start border-primary border-3 py-1 px-3 my-5">
@@ -143,10 +141,7 @@ Feb 2024
 							<p>
 								<strong>Question #2 : Explain the next command: <br> $docker exec -it Ubuntu
 									/bin/bash</strong>
-								xxxxxxx xxxxxxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
+								The command $docker exec -it Ubuntu /bin/bash opens an interactive Bash shell inside the running Docker container named "Ubuntu" for direct command execution.
 							</p>
 
 							<div class="mt-5">
